# stock-predictor

./: .gitignore  Dockerfile  Dockerfile.streamlit  Makefile  README.md  create_project_structure.ps1  docker-compose.yml  procfile  pyproject.toml  render.yaml  requirements.txt  setup.cfg  test_db.py
.github/workflows/: deploy.yml  test.yml
config/: default.yaml  production.yaml
docs/: index.md
models/final/: feature_cols.pkl  lstm_model.h5  scaler.pkl  seq2seq_model.h5
scripts/: backtest.py  clean_cache.py  download_data.py  populate_database.py  show-tree.ps1
src/stock_predictor/api/: main.py  schemas.py
src/stock_predictor/backtesting/: engine.py  metrics.py
src/stock_predictor/data/: collector.py  preprocessor.py  validation.py
src/stock_predictor/database/: supabase_db.py
src/stock_predictor/evaluation/: metrics.py  visualization.py
src/stock_predictor/features/: builder.py  technical.py
src/stock_predictor/models/: __init__.py  baseline.py  lstm.py  predictor.py  seq2seq.py  trainer.py
src/stock_predictor/utils/: config.py  logging.py
src/stock_predictor/visualization/: api_dashboard.py  streamlit_dashboard.py  supabase_dashboard.py  supabase_viewer.py
tests/: conftest.py  test_supabase.py
tests/test_data/: test_collector.py
typings/plotly/: basedatatypes.pyi  basewidget.pyi
typings/plotly/express/: _core.pyi  imshow_utils.pyi
typings/plotly/figure_factory/: _hexbin_mapbox.pyi
typings/plotly/graph_objs/: _bar.pyi  _box.pyi  _figure.pyi  _figurewidget.pyi  _histogram.pyi  _layout.pyi  _sankey.pyi  _scatterpolargl.pyi
(+15 files in other folders)
